[gd_scene load_steps=19 format=2]

[ext_resource path="res://juego/Menus/Kenney Rocket Square2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/Menus/MenuAjustes.gd" type="Script" id=2]
[ext_resource path="res://juego/Menus/Boton.wav" type="AudioStream" id=3]
[ext_resource path="res://juego/Menus/SubirVolumen.gd" type="Script" id=4]
[ext_resource path="res://juego/Recursos/Fonts/Kenney Future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://juego/Menus/ContenedorAccion.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[node name="MenuAjustes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
menu_inicial = "res://juego/Menus/MenuInicio.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 1.0
margin_right = 14.0
margin_bottom = 3.0
color = Color( 0, 0, 0, 1 )

[node name="BotonRegresar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -46.0
margin_right = 107.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 10 )
text = "MENUPRINCIPAL"

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Musica" type="AudioStreamPlayer" parent="."]

[node name="ContenedorTabulador" type="TabContainer" parent="."]
anchor_right = 1.016
anchor_bottom = 1.0
margin_right = 1.63995
margin_bottom = -68.0
custom_fonts/font = SubResource( 11 )
tab_align = 0

[node name="AudioVideo" type="Tabs" parent="ContenedorTabulador"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Titulo" type="Label" parent="ContenedorTabulador/AudioVideo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 375.0
margin_top = 7.0
margin_right = -410.0
margin_bottom = -555.0
rect_scale = Vector2( 0.832284, 1.29288 )
custom_fonts/font = SubResource( 1 )
text = "ajustes"

[node name="PanelPrincipal" type="Panel" parent="ContenedorTabulador/AudioVideo"]
margin_left = 289.0
margin_top = 80.0
margin_right = 661.0
margin_bottom = 497.0

[node name="ContenedorPrincipal" type="VBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal"]
anchor_left = 0.5
anchor_top = 0.684
anchor_right = 0.5
anchor_bottom = 0.684
margin_left = -101.0
margin_top = -263.34
margin_right = 103.0
margin_bottom = -1.34

[node name="Pantalla" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_right = 204.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "     PANTALLA"

[node name="HSeparator" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 26.0
margin_right = 204.0
margin_bottom = 30.0

[node name="Resolucion" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 34.0
margin_right = 204.0
margin_bottom = 54.0

[node name="TextoResolucion" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion"]
margin_top = 3.0
margin_right = 122.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "      RESOLUCION"

[node name="OpcionResolucion" type="OptionButton" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion"]
margin_left = 126.0
margin_right = 155.0
margin_bottom = 20.0

[node name="PantallaCompleta" type="CheckBox" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 58.0
margin_right = 204.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "PANTALLA COMPLETA"

[node name="HSeparator2" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 86.0
margin_right = 204.0
margin_bottom = 90.0

[node name="HSeparator3" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 94.0
margin_right = 204.0
margin_bottom = 98.0

[node name="Volumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 102.0
margin_right = 204.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 5 )
text = "        VOLUMEN"

[node name="HSeparator4" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 126.0
margin_right = 204.0
margin_bottom = 130.0

[node name="VolumenGeneral" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 134.0
margin_right = 204.0
margin_bottom = 155.0

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_top = 3.0
margin_right = 99.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 6 )
text = "GENERAL   "

[node name="SubirVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 103.0
margin_right = 128.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
text = "+"
script = ExtResource( 4 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 132.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="BajarVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 160.0
margin_right = 185.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 9 )
text = "-"
script = ExtResource( 4 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="VolumenMusica" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 159.0
margin_right = 204.0
margin_bottom = 180.0

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_top = 3.0
margin_right = 97.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 6 )
text = "musica      "

[node name="SubirVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 101.0
margin_right = 126.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
text = "+"
script = ExtResource( 4 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 130.0
margin_top = 3.0
margin_right = 154.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="BajarVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 158.0
margin_right = 183.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 9 )
text = "-"
script = ExtResource( 4 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="VolumenSFX" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 184.0
margin_right = 204.0
margin_bottom = 205.0

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 6 )
text = "SFX            "

[node name="SubirVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 100.0
margin_right = 125.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
text = "+"
script = ExtResource( 4 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 129.0
margin_top = 3.0
margin_right = 153.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="BajarVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 157.0
margin_right = 182.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 9 )
text = "-"
script = ExtResource( 4 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="Inputs" type="Tabs" parent="ContenedorTabulador"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="ContenedorTabulador/Inputs"]
margin_left = 241.0
margin_top = 20.0
margin_right = 725.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 12 )
text = "clic en el boton para asignar tecla"

[node name="ContenedorRemapeo" type="VBoxContainer" parent="ContenedorTabulador/Inputs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -55.5
margin_right = 166.5
margin_bottom = 34.5

[node name="ContenedorAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 6 )]

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion" index="0"]
margin_right = 128.0
text = "adelante"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion" index="1"]
margin_left = 132.0
margin_right = 136.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion" index="2"]
margin_left = 140.0
margin_right = 168.0
text = "w"
accion = "mov_adelante"

[node name="ContenedorAccion2" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 6 )]
margin_top = 30.0
margin_bottom = 56.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion2" index="0"]
margin_right = 80.0
text = "atras"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion2" index="1"]
margin_left = 84.0
margin_right = 88.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion2" index="2"]
margin_left = 92.0
margin_right = 120.0
text = "s"
accion = "mov_atras"

[node name="ContenedorAccion3" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 6 )]
margin_top = 60.0
margin_bottom = 86.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion3" index="0"]
margin_right = 128.0
text = "Izquierda"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion3" index="1"]
margin_left = 132.0
margin_right = 136.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion3" index="2"]
margin_left = 140.0
margin_right = 168.0
text = "a"
accion = "mov_izquierda"

[node name="ContenedorAccion4" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 6 )]
margin_top = 90.0
margin_bottom = 116.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion4" index="0"]
margin_right = 112.0
text = "derecha"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion4" index="1"]
margin_left = 116.0
margin_right = 120.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion4" index="2"]
margin_left = 124.0
margin_right = 152.0
text = "d"
accion = "mov_derecha"

[node name="ContenedorAccion5" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 6 )]
margin_top = 120.0
margin_bottom = 146.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion5" index="0"]
margin_right = 96.0
text = "saltar"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion5" index="1"]
margin_left = 100.0
margin_right = 104.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion5" index="2"]
margin_left = 108.0
margin_right = 136.0
text = "f"
accion = "saltar"

[node name="ContenedorAccion6" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 6 )]
margin_top = 150.0
margin_bottom = 176.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion6" index="0"]
margin_right = 120.0
text = "linterna"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion6" index="1"]
margin_left = 124.0
margin_right = 128.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion6" index="2"]
margin_left = 132.0
margin_right = 160.0
text = "m"
accion = "disparar"

[connection signal="pressed" from="BotonRegresar" to="." method="_on_BotonRegresar_pressed"]
[connection signal="item_selected" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion/OpcionResolucion" to="." method="_on_OpcionResolucion_item_selected"]
[connection signal="toggled" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/PantallaCompleta" to="." method="_on_PantallaCompleta_toggled"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral/SubirVolumen" to="." method="_on_SubirVolumenGeneral_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral/BajarVolumen" to="." method="_on_BajarVolumenGeneral_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica/SubirVolumen" to="." method="_on_SubirVolumenMusica_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica/BajarVolumen" to="." method="_on_BajarVolumenMusica_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX/SubirVolumen" to="." method="_on_SubirVolumenSFX_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX/BajarVolumen" to="." method="_on_BajarVolumenSFX_pressed"]

[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion2"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion3"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion4"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion5"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAccion6"]
